<resources>
    <string name="app_name">OpenHeart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_sex">Sex</string>
    <string name="profile_address">Address</string>
    <string name="profile_phone">Phone Number</string>
    <string name="profile_bio">BIO</string>
    <string name="profile_banner">Select Banner</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="logout">Logout</string>
    <string name="pass">Password</string>
    <string name="last_pass">Last Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="wallet">Wallet</string>
    <string name="top_up">Top Up</string>
    <string name="send">Send</string>
    <string name="nominal">Nominal Transfer</string>
    <string name="topsales">Top Sales NFTs</string>
    <string name="no_user">User Number</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Price</string>
    <string name="item_desc">Item Description</string>
    <string name="add_img">Add Image</string>
    <string name="publish">Publish</string>
    <string name="add_coll">Add New Collection</string>
    <string name="required">*required</string>
    <string name="add_img_txt">click here</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="get_location">Get Location</string>

</resources>