<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCollection">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_add_coll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="0dp"
        android:theme="@style/ToolBarStyle">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btn_back_add_coll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


                <ImageView
                    android:id="@+id/logocenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.445"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <ImageView
                    android:id="@+id/wallet_add_coll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_wallet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/logocenter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <TextView
        android:id="@+id/add_new_collectionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_coll"
        android:textSize="22dp"
        android:fontFamily="@font/roboto_bold"
        style="@style/Theme.NFT"
        app:layout_constraintStart_toStartOf="@id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_add_coll" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/item_name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_new_collectionTxt"
        app:layout_constraintWidth_percent="0.90">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/item_price"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_ethereum_eth_mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        app:layout_constraintWidth_percent="0.90">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/item_desc"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_price"
        app:layout_constraintWidth_percent="0.90">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/add_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image_upload"
        app:layout_constraintEnd_toEndOf="@id/img_collection"
        app:layout_constraintTop_toTopOf="@id/img_collection"
        app:layout_constraintStart_toStartOf="@id/img_collection"
        app:layout_constraintBottom_toBottomOf="@id/img_collection"
        app:layout_constraintWidth_percent="0.2"/>



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_collection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_desc"
        app:layout_constraintWidth_percent="0.90"
        app:layout_constraintDimensionRatio="1:0.7"
        app:shapeAppearanceOverlay="@style/collection"
        app:strokeColor="#FF9A62"
        app:strokeWidth="1dp"
        />
    <TextView
        android:id="@+id/required_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="#FF0000"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/img_collection"
        app:layout_constraintStart_toStartOf="@id/img_collection"
        app:layout_constraintWidth_percent=".4"/>
    <Button
        android:id="@+id/publish"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FF9A62"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/publish"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/required_txt"
        app:layout_constraintWidth_percent="0.90"/>

</androidx.constraintlayout.widget.ConstraintLayout>